0.1.0: 
- Initial release

0.1.1:
- SOAPpy struct type recognized
- Category division in predefined data sources
- Added Kegg to predefined data sources
- Intersect/union/except added with Infix operators  (e.g. |Intersect|)
- Infix operators for Match/Stack
- Improvement in TSV detection of skipped rows and fieldnames handling
- Load wrapper_sql and wrapper_tsv only when needed
- Add Python version check
- Several bug fixes
- Cytoscape read/write support using CytoscapeRPC (access using CyNetwork) 


0.1.2:
- Much improved performance (memory/speed) for broadcast in in/contains/filter operations
- Added replace operation, used for identifier mapping
- Added merge operation, also included in match. Merge operates on two slices that have missing values,
  creating one consistent slice. 
- added support for len
- various bug fixes


0.1.3:
- version downgrade for numpy dependency

0.1.4:
- some fixes in array type handling
- missing values in types now indicated by '?'
- evidence added to go annotation data source

0.1.5:
- many fixes
- AddSlice/Take/IndexDict ops
- add predefined algorithms (Algs)
- add Whiten/Std ops
- go annotation sources updated

0.1.6
- running from source simplified

0.1.7
- several fixes
- improved installation documention 

0.1.8
- fixes in replacemissing
- fix in cytoscape wrapper
- add xml read format
- add rank function
- add ismissing
- fix in dim handling
- OMIM link updated, renamed gene_names to gene_alias, added warning for outdatedness'